# GreenCurve

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/greencurve/: __init__.py  predictor.py
src/greencurve/data/raw/FR/: FR_2021_hourly.csv  FR_2022_hourly.csv
src/greencurve/data/raw/NL/: NL_2021_hourly.csv  NL_2022_hourly.csv
src/greencurve/data/raw/PL/: PL_2021_hourly.csv  PL_2022_hourly.csv  PL_2023_hourly.csv
src/greencurve/data/test/FR/: Actual Generation per Production Type_2024_FR.csv
src/greencurve/data/test/NL/: NL_2024_hourly.csv
src/greencurve/data/test/PL/: PL_2024_hourly.csv
tests/: conftest.py  demo.py  test.py  test_predictor.py
tests/data/raw/US/: ercot_load_act_hr_2021.csv  ercot_load_act_hr_2022.csv
