[metadata]
name = GreenCurve
version = 0.1.0
description = Predict the 24-hour renewable energy production curve for the upcoming day.
author = Nathalia Wolf
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas
    numpy
    matplotlib
    prophet
python_requires = >=3.6
holidays==0.67
